--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ali-oss": "^6.1.1",
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "element-ui": "^2.8.2",
