--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ali-oss": "^6.1.1",
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "element-ui": "^2.8.2",
     "jquery": "^3.4.1",
     "sass-loader": "^7.1.0",
